2008-07-18	Nick Schermer <nick@xfce.org>

	* configure.ac.in, xfce4-settings-helper/Makefile.am,
	  xfce4-settings-helper/keyboards.c: Drop libxxf86misc dependency.
	  Xkb can do all this, it's not needed anymore and already
	  removed from Xorg git master.
	* dialogs/keyboard-settings/keyboard-dialog.glade: Show the slider
	  values, add tooltips and change the slider ranges a bit.
	* dialogs/keyboard-settings/main.c: Set default window size width to
	  400px instead on in the glade code.
	* xfce4-settings-helper/pointers.c, xfce4-settings-helper/keyboards.c,
	  xfce4-settings-helper/accessibility.c: Property push and trap
	  x errors.

2008-07-18	Nick Schermer <nick@xfce.org>

	* xfce4-settings-helper/main.c, configure.ac.in: Properly quit
	  the main loop when a signal is received.

2008-07-18	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c: Allow editing the display name
	  of the device in the dialog. This way users can set usable names
	  for devices that are plugged.

2008-07-18	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c: Change option values string.

2008-07-18	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c, xfce4-settings-helper/pointers.c,
	  xfce4-settings-helper/Makefile.am: Show a notification when a
	  mouse device is added. Notification has a button to open
	  the settings dialog, which will select the new device (if possible).

2008-07-18	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c: Properly fix previous commit. Also
	  make the code more readable.

2008-07-18	Nick Schermer <nick@xfce.org>

	* dialogs/mouse-settings/main.c, dialogs/appearance-settings/main.c:
	  Escape the tooltip string, since Gtk+ 2.12 tree tooltips support
	  markup which results in errors with tips like <default pointer>.
	* dialogs/keyboard-settings/main.c: Drop unused variables.

2008-07-18	Nick Schermer <nick@xfce.org>

	* xfce4-settings-helper/accessibility.c: Improve the code a bit