@@ -43,6 +43,7 @@
 #include <libxfce4util/libxfce4util.h>
 
 #include "accessibility.h"
+#include "displays.h"
 #include "pointers.h"
 #include "keyboards.h"
 #include "keyboard-shortcuts.h"
@@ -77,6 +78,7 @@ main (gint argc, gchar **argv)
     GObject    *keyboards_helper;
     GObject    *accessibility_helper;
     GObject    *shortcuts_helper;
+    GObject    *displays_helper;
     pid_t       pid;
     guint       i;
     const gint  signums[] = { SIGHUP, SIGINT, SIGQUIT, SIGTERM };
@@ -154,6 +156,7 @@ main (gint argc, gchar **argv)
     keyboards_helper = g_object_new (XFCE_TYPE_KEYBOARDS_HELPER, NULL);
     accessibility_helper = g_object_new (XFCE_TYPE_ACCESSIBILITY_HELPER, NULL);
     shortcuts_helper = g_object_new (XFCE_TYPE_KEYBOARD_SHORTCUTS_HELPER, NULL);
+    displays_helper = g_object_new (XFCE_TYPE_DISPLAYS_HELPER, NULL);
 
     /* setup signal handlers to properly quit the main loop */
     for (i = 0; i < G_N_ELEMENTS (signums); i++)
@@ -167,6 +170,7 @@ main (gint argc, gchar **argv)
     g_object_unref (G_OBJECT (keyboards_helper));
     g_object_unref (G_OBJECT (accessibility_helper));
     g_object_unref (G_OBJECT (shortcuts_helper));
+    g_object_unref (G_OBJECT (displays_helper));
 
     /* shutdown xfconf */
     xfconf_shutdown ();
