@@ -131,10 +131,10 @@ G_DEFINE_TYPE (XfcePointersHelper, xfce_pointers_helper, G_TYPE_OBJECT);
 static void
 xfce_pointers_helper_class_init (XfcePointersHelperClass *klass)
 {
-  GObjectClass *gobject_class;
+    GObjectClass *gobject_class;
 
-  gobject_class = G_OBJECT_CLASS (klass);
-  gobject_class->finalize = xfce_pointers_helper_finalize;
+    gobject_class = G_OBJECT_CLASS (klass);
+    gobject_class->finalize = xfce_pointers_helper_finalize;
 }
 
 
